force-app/main/default/objects/ImportAssetSetting__mdt/ImportAssetSetting__mdt.object-meta.xml
<CustomObject>
    <label>Import Asset Setting</label>
    <pluralLabel>Import Asset Settings</pluralLabel>
</CustomObject>