force-app/main/default/objects/ImportAssetSetting__mdt/fields/AssetQuantityDivergenceThreshold__c.field-meta.xml
<CustomField>
    <fullName>AssetQuantityDivergenceThreshold__c</fullName>
    <label>Asset Quantity Divergence Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>