force-app/main/default/objects/ImportAssetSetting__mdt/fields/NumberofMonthsRenewalisFor__c.field-meta.xml
<CustomField>
    <fullName>NumberofMonthsRenewalisFor__c</fullName>
    <label>Number of Months Renewal is For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>