force-app/main/default/objects/ImportAssetSetting__mdt/fields/PricebookName__c.field-meta.xml
<CustomField>
    <fullName>PricebookName__c</fullName>
    <label>Pricebook Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>