force-app/main/default/objects/ImportAssetSetting__mdt/fields/RenewalStartDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalStartDate__c</fullName>
    <label>Renewal Start Date</label>
    <type>Date</type>
</CustomField>